--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -70,6 +70,7 @@ Decision: Its a complex problem and cant be solved in couple of days. KB will cu
 ABN adds these things are needed for production, vendors should be told how to do this. We will do it as recommendation because everyone is doing it differently. Bringing scalability to packages – MF describes detailed experience of 1TB AIP. 
 
 2. Showing version of CSIP used. 
+
 If it should be an attribute showing which ver we are using. We are actually doing it profile attribute. We need to have one common and one versioned. KB we are not changing the name of the METS schema, only thing we can make change is METS profile. Just get running no from Lib of Congress web page. CW comments how horrible it is. ABN adds that in reality you have to rely on checksums. 
 Decision – we will let everybody know what we’ll do. 
 
@@ -77,7 +78,7 @@ The rest of the issues are proof reading and just updates to the text.
 
 - 5.	Next project plan and milestones
 
-Going through hoping what we are going to next project. 
+Going through milestoens and activities what we are going to do in the next project. 
 
 Meetings – not only A2 every Wed but depending on the work. WED – agreed good time for everybody. KB will put it up since June 1st for 2 years.  
 
