--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -43,37 +43,38 @@ Agenda:
 
 Text: 
 
-- 1.	Welcome. Secretary of the meeting, announcment of AoB.
+1.	Welcome. Secretary of the meeting, announcment of AoB.
 
 Introduction of attendees, new: Mads Porsklev (Sydarkivera, new member of DLM Forum, future A2), Jose Skofljanec (Slovenian National Arhives, future A2, specification of metadata)  
 
 Secretary of the meeting: Karin Oolu
 Notes will be to GH.
 
-- 2.	AoB
+2.	AoB
 
 Silence, if they come we’ll arrive to this. 
 
-- 3.	DILCIS Board bylaws 
+3.	DILCIS Board bylaws 
 
 Draft has been sent to board members beforehand. Big change is about cycles of membership, its hard to change people during a project. There is an annex where we say how we revise the spec etc. No remarkable comments or Q-s.
 
 Decision: The board has agreed upon the draft.
 
-- 4.	Outstanding issues from e-ARK4ALL A2
+4.	Outstanding issues from e-ARK4ALL A2
 
 CW and KB has been working with issues of CSIP, there are 38 open issues for ver 2. Most of the open ones are for proof reading. There are 1 or 2 we have to bring out today: 
 
-1. CSIP chapters 6.2.2 and 6.2.3. (http://earkcsip.dilcis.eu/#62-handling-large-packages) 
+- CSIP chapters 6.2.2 and 6.2.3. (http://earkcsip.dilcis.eu/#62-handling-large-packages) 
 
-How we can split the package, #HREF is not purely correct either, partly also in AIP. Cohernce with AIP, Q is that how do you know if you are pointing to a parent or to a child? We need to look into how we do referencing and what we are referencing. KB suggests to copy the text and save it for work further on. We are doing the same thing with representation, but not with splitted package. Why don’t we do it like we do when pointing to representation, whats different from pointing to another package? ABN comments to solve it rather soon. We’re running out of time as a project work. Board-wise we could work with that longer. But the project has helped with getting things ready. ABN proposes to put it in the workplan for DILCIS board this year. MF comments they have had the same discussion in Austria as well, it is a major change and has impact to tools. KB would rather have short sub-text that segmentation is going to be handled, but it needs more testing and evaluation. It is complex problem, would be nice to have someone developing it and it needs to get common understanding among the board. If we do the pointing the same way (METS reference), we just need to say its not representation, but piece of the package. Q is how this spec evolves, splitting is a user demand. We can keep it as a separate recommendation, then test it. It depends on how difficult to get change in. Split could be part of ind representation. Having portions from parallel could be tricky. Extremely hard problem. We really need to test this, getting noark xml files with 1 TB. MF reminds shallow IP-s, files could be anywhere. 
+How we can split the package, #HREF is not purely correct either, partly also in AIP. Cohernce with AIP, Q is that how do you know if you are pointing to a parent or to a child? We need to look into how we do referencing and what we are referencing. KB suggests to copy the text and save it for work further on. We are doing the same thing with representation, but not with splitted package. Why don’t we do it like we do when pointing to representation, whats different from pointing to another package? ABN comments to solve it rather soon. We’re running out of time as a project work. Board-wise we could work with that longer. But the project has helped with getting things ready. ABN proposes to put it in the workplan for DILCIS board this year. MF comments they have had the same discussion in Austria as well, it is a major change and has impact to tools. KB would rather have short sub-text that segmentation is going to be handled, but it needs more testing and evaluation. It is complex problem, would be nice to have someone developing it and it needs to get common understanding among the board. If we do the pointing the same way (METS reference), we just need to say its not representation, but piece of the package. Q is how this spec evolves, splitting is a user demand. We can keep it as a separate recommendation, then test it. It depends on how difficult to get change in. Split could be part of ind representation. Having portions from parallel could be tricky. Extremely hard problem. We really need to test this, getting noark xml files with 1 TB. MF reminds shallow IP-s, files could be anywhere. ABN adds these things are needed for production, vendors should be told how to do this. We will do it as recommendation because everyone is doing it differently. Bringing scalability to packages – MF describes detailed experience of 1TB AIP. 
 
-Decision: Its a complex problem and cant be solved in couple of days. KB will cut text in current ver to minimum, but save it for future development. Summer task for D board and for the project. Fingers crossed it will be in ”.no” release. Starting 1st of June and would be fine to be ready by the end of the year (but cant be promised). 
-ABN adds these things are needed for production, vendors should be told how to do this. We will do it as recommendation because everyone is doing it differently. Bringing scalability to packages – MF describes detailed experience of 1TB AIP. 
+Decision: Its a complex problem and can't be solved in couple of days. KB will cut text in current ver to minimum, but save it for future development. Summer task for D board and for the project. Fingers crossed it will be in ”.no” release. Starting 1st of June and would be fine to be ready by the end of the year (but can't be promised). 
 
-2. Showing version of CSIP used. 
+
+- Showing version of CSIP used. 
 
 If it should be an attribute showing which ver we are using. We are actually doing it profile attribute. We need to have one common and one versioned. KB we are not changing the name of the METS schema, only thing we can make change is METS profile. Just get running no from Lib of Congress web page. CW comments how horrible it is. ABN adds that in reality you have to rely on checksums. 
+
 Decision – we will let everybody know what we’ll do. 
 
 The rest of the issues are proof reading and just updates to the text. 
