--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -79,7 +79,7 @@ Decision – we will let everybody know what we’ll do.
 
 The rest of the issues are proof reading and just updates to the text. 
 
-- 5.	Next project plan and milestones
+5.	Next project plan and milestones
 
 Going through milestoens and activities what we are going to do in the next project. 
 
