--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -83,7 +83,7 @@ The rest of the issues are proof reading and just updates to the text.
 
 Going through milestoens and activities what we are going to do in the next project. 
 
-Meetings – not only A2 every Wed but depending on the work. WED – agreed good time for everybody. KB will put it up since June 1st for 2 years.  
+Meetings – not only A2 every Wed but depending on the work. WED – agreed suitable time for everybody. KB will put it up to the Webex since June 1st for 2 years.  
 
 Next meeting: May 28th
 
