--- a/MeetingNotes/20190521.md
+++ b/MeetingNotes/20190521.md
@@ -81,9 +81,9 @@ The rest of the issues are proof reading and just updates to the text.
 
 5.	Next project plan and milestones
 
-Going through milestoens and activities what we are going to do in the next project. 
+Meetings – not just A2 meeting every Wed, but depending on the work. WED – agreed suitable time for everybody. KB will put it up to the Webex since June 1st for 2 years. 
 
-Meetings – not only A2 every Wed but depending on the work. WED – agreed suitable time for everybody. KB will put it up to the Webex since June 1st for 2 years.  
+The text and working tasks suggested for A2 in the new bid was walked through thoroughly. 
 
 Next meeting: May 28th
 
