--- a/MeetingNotes/20190529.md
+++ b/MeetingNotes/20190529.md
@@ -7,8 +7,8 @@ Minutes
 •	Gregor Zavrsnik (Geoarh)
 •	Karin Oolu (DLM)
 •	Arne-Kristian Groven (National Archives of Norway)
-•	*Carl Wilson (A3, OPF) 
-•	*Phillip Tømmerholt (National Archives of Denmark)
+•	Carl Wilson (A3, OPF) 
+•	Phillip Tømmerholt (National Archives of Denmark)
 
 - Agenda:
 1.	Status update of specs
@@ -17,21 +17,19 @@ Minutes
 
 Last A2 meeting within this project. Status update of specs: 
 
+SIP: 
 CW shares the screen and gives final detailed comments to MF for PDF version of EARK-SIP spec. Almost all OK. MF will do the abstract, CW will take care of the rest. 
 
-GZ gives comments about geo spec, text is ready, still some references to be added to headings.
+DIP: ABN comments the status of DIP. Markdown, will do the profile. KB can do the profile if needed. Already have the profile in one of the branches. CW offers to contact in Slack if help needed in near days. ABN and PT will let KB and CW know asap their work is ready to be taken over for final editing.   
 
-ABN comments the status of DIP. Markdown, will do the profile. KB can do the profile if needed. Already have the profile in one of the branches. CW offers to contact in Slack if help needed in near days. Consistent title pages.  
+GEODATA: GZ reports working with specs and not having holidays. Text is ready, still some references to be added to headings. Will keep close contact in near days. Proof reading: send to KB who will forward it to the right persons. 
+ERMS: Last proof reading phase. Goal was to make it look like more to METS profile. Consistent title pages. 
 
-GZ reports working with specs and not having holidays. Will keep close contact in near days. Proof reading: send to KB who will forward it to the right persons. 
-
-KB reports the status of ERMS spec which is on last proof reading phase. Goal was to make it look like more to METS profile. KB has been working with DILCIS Board web-page, to have similar text there looking the same, working links, etc. Big plan is to link it to GH in latest version. Being done tomorrow or by FRI morning. 
+KB has been working with DILCIS Board web-page, to have similar text there looking the same, working links, etc. Big plan is to link it to GH in latest version. Being done tomorrow or by FRI morning. 
 
 ABN Q where is actually the text issue 340? Pull req is up for that in CSIP. 
 
 MF Q are we still in schedule? KB we dont have any exceptions, we have to be ready.
-
-ABN and PT will let KB and CW know asap their work is ready to be taken over for final editing. 
 
 A-KG – will be available on Fri, if anything to read or help. 
 
@@ -41,6 +39,6 @@ MF is available via Skype to test if anything test to run.
 
 Thank you everyone, we’ll be in touch!
 
-Next meeting: will be announced. 
+Next meeting: TBA 
 
 Notes by: Karin Oolu 
