Update and rename 20191210 to 20191210.md

--- a/MeetingNotes/20191210.md
+++ b/MeetingNotes/20191210.md
@@ -19,8 +19,7 @@ Agenda:
 Text:
 
 - Welcome, introduction round. KB from sydarkivera, working with all specs in all levels. Leading A2. JA Vice chair of Dilcis Board, JK Highbury, supporting KB with text of the specs, JS archivist, coordinator of A2 regarding cancer registries, KO secretary, records manager, MM database preservation expert, MF working mostly with SIP, + databases, SM SIP spec for health records, AL database preservation and SIARD, VMO database preservation expert, ABN SIARD, DIP, also A3 validation, segmentation. 
-KB introduces A2 GDrive, 
-
+KB introduces A2 GDrive
 - Meetings will take place on Wednesday’s, starting from the 8th of Jan 2020 at 10 CET. We won’t have all meetings every Wed, only in the beginning, but the time will be set up for Webex as a meeting point. 
 - KB introduces the Excel sheet with all tasks discussed for the new bid. There are months after each participant (Month01 is November 2019). There everyone can see how much time we have for all actions to be done and when. 
 - We have lot of people working with SIARD. It is on solid state, we need to create the CITS describing how to place the SIARD information into a package. Specs needs to go out for public by Nov 2020. Guidelines should be public earlier; JA, JK and KB will mostly work with it. 
