--- a/MeetingNotes/20191210.md
+++ b/MeetingNotes/20191210.md
@@ -20,22 +20,25 @@ Agenda:
 Text:
 
 - Notes KO
-- Welcome, introduction round. KB from sydarkivera, working with all specs in all levels. Leading A2. JA Vice chair of Dilcis Board, JK Highbury, supporting KB with text of the specs, JS archivist, coordinator of A2 regarding cancer registries, KO secretary, records manager, MM database preservation expert, MF working mostly with SIP, + databases, SM SIP spec for health records, AL database preservation and SIARD, VMO database preservation expert, ABN SIARD, DIP, also A3 validation, segmentation.
+- Welcome, introduction round. KB from Sydarkivera, working with all specs in all levels. Leading A2. JA Vice chair of Dilcis Board, JK Highbury, supporting KB with text of the specs, JS archivist, coordinator of A2 regarding cancer registries, KO secretary, records manager, MM database preservation expert, MF working mostly with SIP, + databases, SM SIP spec for health records, AL database preservation and SIARD, VMO database preservation expert, ABN SIARD, DIP, also A3 validation, segmentation.
 
-- KB introduces A2 GDrive
+- KB introduces A2 Google Drive.
 
-- Meetings will take place on Wednesday’s, starting from the 8th of Jan 2020 at 10 CET. We won’t have all meetings every Wed, only in the beginning, but the time will be set up for Webex as a meeting point. 
+- Meetings will take place on Wednesday’s, starting from the 8th of Jan 2020 at 10 CET. We won’t have all meetings every Wed, only in the beginning, work will go on in smaller groups later. But the time will be set up for Webex as a meeting point on Wed-s.  
 
-- KB introduces the Excel sheet with all tasks discussed for the new bid. There are months after each participant (Month01 is November 2019). There everyone can see how much time we have for all actions to be done and when. 
+- KB introduces the Excel sheet with all tasks discussed for the new bid. There are months after each participant (Month01 is November 2019). Everyone can see how much time we have for all actions to be done and when. 
 
-- We have lot of people working with SIARD. It is on solid state, we need to create the CITS describing how to place the SIARD information into a package. Specs needs to go out for public by Nov 2020. Guidelines should be public earlier; JA, JK and KB will mostly work with it. 
+- We have a lot of people working with SIARD. It is on solid state, we need to create the CITS describing how to place the SIARD information into a package. 
+
+- Specs needs to go out for public by Nov 2020. Guidelines should be public earlier; JA, JK and KB will mostly work with it. 
 
 - A2 is joint work with Dilcis Board, who is maintaining all specs and is taking high-level decisions, in cooperation with A2. 
 
-- New thing is Year one report, with also K2 involved. Waiting for GA what they exactly need for that and when (M12?). 
+- New thing is Year one report, with also K2 involved. Waiting for GA what they exactly need for that and when (M12?).
+
 - MF Q about working hours per month. JA will ask DA what exactly will be put there; he will create an overall table for the whole project? It would be very good if we’ll get overview like that. Let’s do it on monthly basis. 
 
-- KB will send meeting booking in Webex and also the link to the recording in a separate e-mail. Notes will be to the GH to the same place. 
+- KB will send out meeting booking in Webex and also the link to the recording in a separate e-mail. Notes will be uploaded to the GH to the same place. 
 
 - Home task: Everyone thinks about Excel sheet and how many hours you are going to put there. 
 
