--- a/MeetingNotes/20191210.md
+++ b/MeetingNotes/20191210.md
@@ -2,25 +2,21 @@ Minutes
 
 Members: 
 
-•	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
-•	Vesa-Matti Ovaska DLM (National Archives of Finland)
-•	Markus Merenmies DLM (National Archives of Finland)
-•	Joze Skofljanec (Archives of the Republic of Slovenia)
-•	Jamie Kaminski (Highbury IVS)
-•	Karin Oolu DLM (Easylean OÜ, DLM)
-•	Audun Lund (Swiss Federal Archives)
-•	Miguel Ferreira (KEEP Solutions)
-•	Stephen Mackey (Swiss Federal Archives)
-•	Janet Anderson (Highbury IVS)
-•	Anders Bo Nielsen (Danish National Archives)
-
-Agenda:
-1.	Open 
+- Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
+- Vesa-Matti Ovaska DLM (National Archives of Finland)
+- Markus Merenmies DLM (National Archives of Finland)
+- Joze Skofljanec (Archives of the Republic of Slovenia)
+- Jamie Kaminski (Highbury IVS)
+- Karin Oolu DLM (Easylean OÜ, DLM)
+- Audun Lund (Swiss Federal Archives)
+- Miguel Ferreira (KEEP Solutions)
+- Stephen Mackey (Swiss Federal Archives)
+- Janet Anderson (Highbury IVS)
+- Anders Bo Nielsen (Danish National Archives)
 
 Text:
 
-- Notes KO
-- Welcome, introduction round. KB from Sydarkivera, working with all specs in all levels. Leading A2. JA Vice chair of Dilcis Board, JK Highbury, supporting KB with text of the specs, JS archivist, coordinator of A2 regarding cancer registries, KO secretary, records manager, MM database preservation expert, MF working mostly with SIP, + databases, SM SIP spec for health records, AL database preservation and SIARD, VMO database preservation expert, ABN SIARD, DIP, also A3 validation, segmentation.
+- Welcome, notes will be taken by KO, introduction round. KB from Sydarkivera, working with all specs in all levels. Leading A2. JA Vice chair of Dilcis Board, JK Highbury, supporting KB with text of the specs, JS archivist, coordinator of A2 regarding cancer registries, KO secretary, records manager, MM database preservation expert, MF working mostly with SIP, + databases, SM SIP spec for health records, AL database preservation and SIARD, VMO database preservation expert, ABN SIARD, DIP, also A3 validation, segmentation.
 
 - KB introduces A2 Google Drive.
 
