Update and rename 20191210.md to 20191211.md

--- a/MeetingNotes/20191211.md
+++ b/MeetingNotes/20191211.md
@@ -10,7 +10,7 @@ Members:
 - Karin Oolu DLM (Easylean OÜ, DLM)
 - Audun Lund (Swiss Federal Archives)
 - Miguel Ferreira (KEEP Solutions)
-- Stephen Mackey (Swiss Federal Archives)
+- Stephen Mackey (PIQL)
 - Janet Anderson (Highbury IVS)
 - Anders Bo Nielsen (Danish National Archives)
 
