--- a/MeetingNotes/20200108.md
+++ b/MeetingNotes/20200108.md
@@ -37,7 +37,7 @@ Text:
 
 •	We will continue the planning next meeting, by then KB will have a better overview of A2 and A3 dependencies. Everyone start planning when you are going to do the work in smaller groups. E.g, we need to look for different standards, for geodata, can be started now. We don’t have the template for the different content type specs yet, but can be started with the text. The first start from reading, adding the names to the tasks, we need to know who is going to be involved from each organization. KB will check the issues in GB.
 
-•	ABN comments that after we look sub-activities etc, we need to look at the budget again. GZ gives an example that he doesn’t see any archives in the tasks to help with actual demand. But that should be accounted for. DA comments that originally it was agreed with the lower cost recovery, some have 75%, some 100% of normal costs. Figures showed fewer months that we are going to work actually, enough budget was not allocated. KB will update the work plan according to these calculations and will let everyone know. The basic unit is an hour, not days. 
+•	ABN comments that before we look sub-activities etc, we need to look at the budget again. GZ gives an example that he doesn’t see any archives in the tasks to help with actual demand. But that should be accounted for. DA comments that originally it was agreed with the lower cost recovery, some have 75%, some 100% of normal costs. Figures showed fewer months that we are going to work actually, enough budget was not allocated. KB will update the work plan according to these calculations and will let everyone know. The basic unit is an hour, not days. 
 
 •	KO continues notetaking and all notes will be in GH. Webex connection time is booked for Weds. Please don’t go to drive until KB has done updates. 
 
