--- a/MeetingNotes/20200115.md
+++ b/MeetingNotes/20200115.md
@@ -27,9 +27,9 @@ Text:
 - The updated Workplan is in G-Drive. Sheet 1 shows calculated person-months according to the milestones, sheet 2 shows participants with all abbreviations. Please, everyone, add names and e-mails! 
 DA comments that the sheet that we have in the A2 root folder is following the effort that we are allowed to charge EC for, where everyone has to agree on the same % of cost recovery. Its confusing and DA will create a new calculation, then we’d know how many person-months everyone supposed to do. 
 
-- ABN comments we are waiting for 2 signature from WC in regard to GA. 
+- ABN comments we are waiting for 2 signatures from WC in regard to GA. 
 
-- KB explains that if you change the question marks into numbers, you need to remove the number in the new specification part, in the all parts section.
+- KB explains 2nd sheet and if you change the question marks into numbers, you need to remove the number in the new specification part, in the all parts section.
 We really need to start working! KB is working with OPF with the overall structure, with all dependencies we have, but it's not interfering to start with specifications. 
 
 - AP will check and help JS with access restrictions to open Excel files in Google without changing the network. 
@@ -39,12 +39,13 @@ We really need to start working! KB is working with OPF with the overall structu
 - All to be checked and proof-read preferably by M11 for the latest! 
 
 - For the next meeting: 
+
 Start thinking about the workplan! For the next meeting ABN will organize SIARD part, for example, and check out if people are being allocated to different tasks and sub-tasks, e-g who is working with what tasks/sub-tasks from Highbury, from KEEPS, .. etc.
 
 Make sure you know who is working with you in sheet 2 in G-Drive, KB will add the column for people not connected all the time.   
 
 DA has uploaded the file in G-Drive meanwhile, where actual work can be seen.
 
-Next meeting: Jan 22nd, 2020
+- Next meeting: Jan 22nd, 2020
 
-Notes by: Karin Oolu
+- Notes by: Karin Oolu
