--- a/MeetingNotes/20200122.md
+++ b/MeetingNotes/20200122.md
@@ -1,6 +1,7 @@
 Minutes
 
-Members:
+Members present:
+
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 •	Markus Merenmies DLM (National Archives of Finland)
@@ -21,27 +22,30 @@ A2 Workplan discussion continues
 
 Text:
 
-Overview of the updated workplan sheet in G-Drive https://docs.google.com/spreadsheets/d/1uomtjQ2sWtgtXaWp69o3QWpLYyF7m0ZTPuVhXVNyf-0/edit#gid=815051846. Thanks JA, MF, ABN, PT for updates, SM has different workplan for e-Health 1. 
+- Overview of the updated workplan in G-Drive https://docs.google.com/spreadsheets/d/1uomtjQ2sWtgtXaWp69o3QWpLYyF7m0ZTPuVhXVNyf-0/edit#gid=815051846. Thanks JA, MF, ABN, PT for updates, SM has different workplan for e-Health 1. 
 
-ABN/PT: SIARD workplan https://docs.google.com/spreadsheets/d/1AM6jS0lwO--OOPeYjG6q7eIvClp1x78Iyf1PKlr-Vwc/edit#gid=0
+- ABN/PT: SIARD workplan in G-Drive https://docs.google.com/spreadsheets/d/1AM6jS0lwO--OOPeYjG6q7eIvClp1x78Iyf1PKlr-Vwc/edit#gid=0
 The work is divided as CITS SIARD, case study (which starts and should be going on in parallel) and user groups. + there is total calculation below for each organization, + 2nd worksheet for contact details.
+
 MF Q: Does involvement in a particular task will be more on the technical side and not so much on actual content type spec, more on the SIARD file? Yes, there is only 1 person month for that. Is splitting part in SIARD or IP? We do that separately. Splitting part should happen in both specs, in IP and SIARD file. We need to be able to split it regardless you use IP or not. To figure out which would be the best person to work with that task, MF will spread it in KEEPS. 
+
 MM comments about case study part, some questions arose. More communication needed with other partners how we are going do the actual work. PT adds that we should plan feedback on how to put SIARD in IP, to test if you could create packages that comply with CITS SIARD. Starting from what is SIARD and then we can get feedback directly, maybe create guidelines. Deeper discussions will take place in the future, incl ARS. 
  
-AP comments that JZ will talk to the cancer registry. JZ and DA had discussed financing (they will issue an invoice). 
+- AP comments that JZ will talk to the cancer registry. JZ and DA had discussed financing (they will issue an invoice). 
  
-ABN comments that anything hasn't been done regarding DIP part yet, very little sources for that, bringing also colleagues. It’s mostly maintenance. 
+- ABN comments that anything hasn't been done regarding DIP part yet, very little sources for that, bringing also colleagues. It’s mostly maintenance. 
  
-MF comments also SIP: Mostly maintenance, fixing issues. I can do most of the writing that would necessary but would like to have ABN as a technical consultant, or PT. Also JA for proof-reading. Who from NAE will be involved? CW from OPF with electronic publishing. KB as a final reviewer. KB comments there are several people from NAE involved but don't know the names. Agreed.
+- MF comments also SIP: Mostly maintenance, fixing issues. I can do most of the writing that would necessary but would like to have ABN as a technical consultant, or PT. Also JA for proof-reading. Who from NAE will be involved? CW from OPF with electronic publishing. KB as a final reviewer. KB comments there are several people from NAE involved but don't know the names. Agreed.
  
-PREMIS will be lifted out and being own spec. The only thing that affects the IP-s is splitting. 
+- PREMIS will be lifted out and being own spec. The only thing that affects the IP-s is splitting. 
  
-KO and KB will do the overall administration as we usually do. 
+- KO and KB will do the overall administration as we usually do. 
  
-DILCIS board meetings will take place in Zagreb and in Berlin where we will meet face to face. One room for 2 hours together. The meetings will be in combination with A2. 
+- DILCIS board meetings will take place in Zagreb and in Berlin where we will meet face to face. One room for 2 hours together. The meetings will be in combination with A2. 
 
 Next week continue with workplan. We should start working! 
 
 Next meeting: Jan 29th, 2020
+
 Notes by: Karin Oolu
 
