--- a/MeetingNotes/20200119.md
+++ b/MeetingNotes/20200119.md
@@ -19,27 +19,25 @@ Members:
 •	Sven Schlarb (Swiss Federal Archives)
 •	Ane Hovdan 
 
-- Agenda: 
+Agenda: 
 
 A2 Workplan discussion continues
+https://docs.google.com/spreadsheets/d/1uomtjQ2sWtgtXaWp69o3QWpLYyF7m0ZTPuVhXVNyf-0/edit#gid=815051846
 
-- Text:
+Text:
 
-https://docs.google.com/spreadsheets/d/1uomtjQ2sWtgtXaWp69o3QWpLYyF7m0ZTPuVhXVNyf-0/edit#gid=815051846. 
-KB points out we do have work ahead with guidelines and procedures (JK and JA) + others responsibility, also endorsement procedure (KB and JK) + certifications. Important is that people reading specs are not involved in the work of the specifications in any way. 
+- KB points out we do have work ahead with guidelines and procedures (JK and JA) + others responsibility, also endorsement procedure (KB and JK) + certifications. Important is that people reading specs are not involved in the work of the specifications in any way. 
  
-Updates regarding workplan:
+- Updates regarding workplan:
  
 Geodata, GZ - started work this week, putting together all sub-tasks, rearrange them and have suggestions from people. KB reminds to plan time for the guidelines. 
  
 E-Health2, JZ – agreement is more or less confirmed but not official yet. Hopefully, it will be fixed by Feb 15th and we can put everything into worksheets. 
                                                                                                                                
-PT Q about guidelines. Short introduction for people to start using SIARD, text you can’t have in the CITS, which is a technical document. Keeping the CITS as clean as possible from explaining things.
+- PT Q about guidelines. Short introduction for people to start using SIARD, text you can’t have in the CITS, which is a technical document. Keeping the CITS as clean as possible from explaining things.
  
-No meeting next week for people who are not in the SIARD team! 
+- No meeting next week for people who are not in the SIARD team! 
 SIARD group will have the time if no cancellation by ABN by Monday. 
 Feb 12th is the final day to discuss the workplan. 
- 
-                                                                   
+                                                                    
 Notes by: Karin Oolu
-
