--- a/MeetingNotes/20200212.md
+++ b/MeetingNotes/20200212.md
@@ -1,6 +1,6 @@
 Minutes
 
-Members:
+- Members:
 
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
@@ -18,10 +18,11 @@ Members:
 •	Karin Oolu DLM (EasyLean OÜ)
 •	Audun Lund (Swiss Federal Archives)
 
-Agenda: 
+- Agenda: 
+
 A2 Workplan and progress
 
-Text:
+- Text:
 
 KB reports working with the overall workplan to make sure everything will be covered, that we are on track. Time is a big risk. 
  
@@ -54,6 +55,6 @@ AP Q about timesheet. KB will be needing to know the time to make calculations.
 
 KB will get back to everyone when the overall workplan is ready. 
 
-Next meeting on Feb 26th, SIARD group will have the meeting time next Wed, Feb 19th. Recording will start automatically. 
+- Next meeting on Feb 26th, SIARD group will have the meeting time next Wed, Feb 19th. Recording will start automatically. 
 
-Notes by: Karin Oolu
+- Notes by: Karin Oolu
