--- a/MeetingNotes/20200226.md
+++ b/MeetingNotes/20200226.md
@@ -2,7 +2,7 @@ EARK3 A2 meeting on 26th of Feb 2020
 
 Minutes
 
-Members:
+- Members:
 
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
@@ -17,11 +17,11 @@ Members:
 •	Audun Lund (Swiss Federal Archives)
 •	Stephen Mackey (PIQL)
 
-Agenda: 
+- Agenda: 
 
 A2 Workplan and reporting 
 
-Text:
+- Text:
 
 Workplan and extra document describing different tasks is not ready yet, but in closing in phase. 
 
@@ -58,7 +58,7 @@ AOB:
 
 JA reports about e-mail from Jan Karving, EU Parliament are interested in taking up and they are going to have a meeting on Mar 3rd. They get guidance from Publication Office. None of us is invited, but KEEPs will be there to demo Roda. 
 
-Fulgencio is has been invited to speak at the ICA at the SIO to Steering Committee in June. 
+Fulgencio has been invited to speak at the ICA at the SIO to Steering Committee in June. 
 
 The report from Dec event is now on the website. There are some conclusions, its positive. 
 
