--- a/MeetingNotes/20200226.md
+++ b/MeetingNotes/20200226.md
@@ -1,5 +1,3 @@
-EARK3 A2 meeting on 26th of Feb 2020
-
 Minutes
 
 - Members:
@@ -54,7 +52,7 @@ Guidelines and procedures/ KB with JK: started up the work creating new CITS and
 
 Endorsement and certification/ KB: not started yet but will be started soon. 
 
-AOB:
+- AOB:
 
 JA reports about e-mail from Jan Karving, EU Parliament are interested in taking up and they are going to have a meeting on Mar 3rd. They get guidance from Publication Office. None of us is invited, but KEEPs will be there to demo Roda. 
 
