--- a/MeetingNotes/20200401.md
+++ b/MeetingNotes/20200401.md
@@ -1,6 +1,6 @@
 Minutes
 
-Members:
+- Members:
 
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
@@ -27,11 +27,11 @@ Apologies:
 •	Lauri Rätsep (National Archives of Estonia) 
 
 
-Text:
+- Text:
 
 Overall workplan with dates has been sent via e-mail. 
 
-Progress report of specs:
+- Progress report of specs:
 
 Overall admin/ KB reports that SOD’s (Service Offering Descriptions) for IPs and for the CITS is almost ready, final checks by JK and JA still going on. We reduced the number to 2 as we can't make one SOD for each IP and CITS. Info will be circulated when ready. Different IPs are in maintenance mode.
 
@@ -57,7 +57,7 @@ Endorsement and certification/ Start ASAP, but the review process is the most im
 
 JA Q about coming review – Are we going to have a streamlined system with Digit? Better to be taking the knowledge from last time and trying even more streamlined process.  
 
-Next meeting on Apr 15th, KB will send e-mails if necessary.
+- Next meeting on Apr 15th, KB will send e-mails if necessary.
 RDB meeting will take over the Webex time. 
 
-Notes by: Karin Oolu
+- Notes by: Karin Oolu
