--- a/MeetingNotes/20200415.md
+++ b/MeetingNotes/20200415.md
@@ -32,7 +32,7 @@ Text:
 
 Workplan is in GDrive, work with descriptions is still going on (OPF, webpage). The next A2 meeting is on Apr 29th, please let KB know if you need meeting time in Webex. All web tools are upgrading and creating restrictions on access to meetings. 
 
-Progress report of specs:
+- Progress report of specs:
 
 Overall admin/ SOD for IP-s and the CITS is handed over to A1. Hope they have not too many comments. If we write one case, people want 25 cases, should be a simplified description on the implement. 
 
@@ -56,6 +56,6 @@ Guidelines and procedures/ KB reports working on a lot of documents at the same 
 
 Endorsement and certification/ KB: similar to work with guidelines, the focus is to get the review ready and consider what we learned the last year. 
 
-Next meeting on Apr 29th.
+- Next meeting on Apr 29th.
 
-Notes by: Karin Oolu
+- Notes by: Karin Oolu
