--- a/MeetingNotes/20200415.md
+++ b/MeetingNotes/20200415.md
@@ -20,7 +20,6 @@ Members:
 •	Lauri Rätsep (National Archives of Estonia) 
 
 Apologies: 
-
 •	Miguel Ferreira (KEEP Solutions)
 •	David Anderson (Highbury IVS)
 •	Janet Anderson (Highbury IVS) 
@@ -40,7 +39,7 @@ SIP, AIP, DIP are in maintenance mood, we’ve been in meeting with ETSI people 
 
 Geodata +GIS/ GZ had online meetings with people from the ODC, talked about a possible standard that could be used to GIS archiving. Got proposals, one of them will present the standard for geodata on Geoforum presentation in May. Also got replies from Polish colleagues who are reviewing specs – they take actions after the Easter holidays. For the maintenance: preparing presentation within A4, this is regarding the maintenance of the GIS spec part. Guidelines: 3rd deliverable for me. KB: Guidelines will go out for review in Month 10, don’t hold back, write as much as you can. 
 
-RM/ KB: OPF is fully occupied. Asap possible we will talk 
+RM/ KB: OPF is fully occupied. Asap possible we will talk.  
 
 SIARD/ ABN comments they are working with parts of the spec itself, also on the implementation directly into the actual cits out of the folder structure.  Also Use cases in there, to decide on how much we would expect people to have when it comes to the documentation of the database. so far going well. Rest of the April and may we have days to get busier, to have a decent proposal. Things are still looking fine. Let kb know as soon as any risk.  
 
