--- a/MeetingNotes/20200429.md
+++ b/MeetingNotes/20200429.md
@@ -21,7 +21,7 @@ Members:
 •	Sven Schlarb (Swiss Federal Archives)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
-Text
+Text:
 
 KB explains the updated work plan (circulated also via e-mail:  https://drive.google.com/drive/folders/1TOfwYuv1lOmMbYrM8bPRPZb31WZxshT3). 
 We are doing everything combined with a timetable where we have all delivery dates, review tasks. Technical review (A3), Oversight review (JA or JK), Specs review + Year1 review for the whole project. WP tasks are in the table, more detailed in the description column. The important part is progress tracking. This is going to be ready by the next meeting on May 13th,  (OPF will join our meeting). It will be in a template in word. We’ll have a similar sort of template for guidelines.  KB has a template in word for specification, maybe not all specs will not be in GH format. KB is testing that out. 
