--- a/MeetingNotes/20200601.md
+++ b/MeetingNotes/20200601.md
@@ -18,7 +18,7 @@ The SIARD team suggestion is to:
 -	The review in October is limited to segmentation and external storage of big LOB’s.
 -	The E-ARK specification review will be used for the Request For Comments (RFC) for SIARD version 2.2.
 - There will be a CITS Relational Databases based upon use of SIARD created.
--	Publication of SIARD 2.2 and CITS SIARD will be as planned in E-ARK3 month 22. (August 2021)
+-	Publication of SIARD 2.2 and CITS Relational Databases will be as planned in E-ARK3 month 22. (August 2021)
  
 ## Change impact in relation to DILCIS and E-ARK3:
 *Timeline*: None, same amount of work to carry out.<br/> 
