--- a/MeetingNotes/20200527.md
+++ b/MeetingNotes/20200527.md
@@ -1,4 +1,4 @@
-Minutes
+# Minutes
 
 -	Members:
 
@@ -28,13 +28,12 @@ Apologies:
 •	Lars J Alvik (National Archives of Norway 
 •	Phillip Tømmerholt (Danish National Archives)
 
-
--	Text: 
+## Text: 
 
 Welcome, some members missing today as Geodata Forum going on simultaneously. 
 The description of the work: https://docs.google.com/spreadsheets/d/1qoSStfrD0sPR45nRNEXJZytJ3WewH0Rt4-n4hWJ1zJQ/edit?usp=sharing 
 Next A2 all meeting on the 10th. Next week 3rd its possible to use the A2 meeting slot.
-Reminder of the big date in October
+Reminder of the big date in October!
 
 -	Progress report of specs:
 Overall admin/ KB reports that SODs for A2 (one for packages and one for CITS) has been approved, not known where it’s going to be published. JA comments it takes time to get things right. Also got confirmation from Fulgencio that we have new time plan for e-Health2 due to pandemic, they have accepted that.  
