--- a/MeetingNotes/20200527.md
+++ b/MeetingNotes/20200527.md
@@ -1,6 +1,6 @@
 # Minutes
 
--	Members:
+## Members:
 
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Ane Hovdan (National Archives of Norway)
@@ -36,9 +36,10 @@ Next A2 all meeting on the 10th. Next week 3rd its possible to use the A2 meetin
 Reminder of the big date in October!
 
 -	Progress report of specs:
-Overall admin/ KB reports that SODs for A2 (one for packages and one for CITS) has been approved, not known where it’s going to be published. JA comments it takes time to get things right. Also got confirmation from Fulgencio that we have new time plan for e-Health2 due to pandemic, they have accepted that.  
 
-IP-s / CW and KB is going through the publication process, hopefully, will be published on Monday.  
+*Overall admin*/ KB reports that SODs for A2 (one for packages and one for CITS) has been approved, but not known where it’s going to be published. JA comments it takes time to get things right. Also got confirmation from Fulgencio that we have new time plan for e-Health2 due to pandemic, they have accepted that.  
+
+*IP-s*/ CW and KB is going through the publication process, hopefully, will be published on Monday.  
 
 Geodata +GIS/ GZ sent the update to KB, they have not focused on specs due to the event going on. 
 
@@ -64,4 +65,6 @@ ABN: At the end of the review the work with handling large IPs, in general, has 
 
 Next meeting in two weeks, on June 10th.
 
-Notes by: Karin Oolu
+## Notes by: 
+
+Karin Oolu
