--- a/MeetingNotes/20200527.md
+++ b/MeetingNotes/20200527.md
@@ -41,27 +41,27 @@ Reminder of the big date in October!
 
 *IP-s*/ CW and KB is going through the publication process, hopefully, will be published on Monday.  
 
-Geodata +GIS/ GZ sent the update to KB, they have not focused on specs due to the event going on. 
+*Geodata +GIS*/ GZ sent the update to KB, they have not focused on specs due to the event going on. 
 
-RM/ KB: CW is looking at validation, almost ready. 
+*RM*/ KB: CW is looking at validation, almost ready. 
 
-SIARD/ ABN comments we have been working with old shell actual CITS spec, a colleague is doing together with PT. SIARD 2.2 - we are ready to migrate content, I haven’t informed Lauri enough about user group, it's living its own life in GH, coming back to that this week. Work regarding use cases - MM has a slot on 10th of May meeting talking what’s going on. KB comments we are waiting for Dilcis board to say OK making its request for comments, in the meantime you are preparing everything. 
+*SIARD*/ ABN comments we have been working with the actual CITS spec, a colleague is doing it together with PT. SIARD 2.2 - we are ready to migrate content, I haven’t informed Lauri enough about user group, it's living its own life in GH, coming back to that this week. Use cases - MM has a slot on May 10th meeting talking what’s going on. KB comments we are waiting for Dilcis board to say OK making its request for comments, in the meantime you are preparing everything. 
 
-MF Q We didn’t have CITS for databases, we only had a spec of SIARD, not the packaging itself. Are we building a packaging content type for SIARD itself? KB we will have a CITS for SIARD, the spec itself will be rather a tiny document, but SIARD itself will contain all lobs/blobs etc. MF clarifies: siarSIARDd is content, it should be placed within the representation folder of IP. We need a Dilcis board document saying how we should package databases, weather in SIARD or other formats. We need to package it somehow and see the SIARD inside. ABN we are working on that, there will be the document how to package database.  KB we are combining SIARD regarding the blobs, for SIARD itself and at the same time, we have cits for SIARD. ABN comments the most important part is the package structure, and also what kind of metadata we expect. That’s the work we are doing with use cases. 
+MF Q We didn’t have CITS for databases, we only had a spec of SIARD, not the packaging itself. Are we building a packaging content type for SIARD itself? KB we will have a CITS for SIARD, the spec itself will be rather a tiny document, but SIARD itself will contain all lobs/blobs etc. Discussion: SIARDd is content, it should be placed within the representation folder of IP. We need a Dilcis board document saying how we should package databases, weather in SIARD or other formats. We need to package it somehow and see the SIARD inside. ABN confirms we are working on that, there will be the document how to package database. KB we are combining SIARD regarding the blobs, for SIARD itself and at the same time, we have cits for SIARD. ABN comments the most important part is the package structure, and also what kind of metadata we expect. That’s the work we are doing with use cases. 
 
-E-Heatlh1/ SM: going well, looking at having a draft in July, should be available Aug onwards. Q about different specs. Writing CITS, looking at the layer data model which is in SIPs, it talks about business-specific specs, gives an example of healthcare. KB comments it’s a combination, same three are in the same basket. Sometimes it’s hard to say it’s just content. Packaging databases could be relevant with e-Health too. MF comments that’s relevant, we are explaining to people how they should package some specific type of content when they want to transfer from or to the repository. MF doesn’t understand what is business-specific, its just content. The Packaging is a really important part, not the content. SIARD is a special case, as we kind of adopted it and we have to take care of that. In conclusion: SM will send earlier work to KB to be sure to meet expectations. 
+*E-Heatlh1*/ SM: going well, looking at having a draft in July, should be available Aug onwards. Q about different specs. Writing CITS, looking at the layer data model which is in SIPs, it talks about business-specific specs, gives an example of healthcare. KB comments it’s a combination, same three are in the same basket. Sometimes it’s hard to say it’s just content. Packaging databases could be relevant with e-Health too. MF comments we are explaining to people how they should package some specific type of content when they want to transfer from or to the repository. What is business-specific, its just content. The Packaging is a really important part, not the content. SIARD is a special case, as we kind of adopted it and we have to take care of that. *In conclusion*: SM will send earlier work to KB to be sure to meet expectations. 
 
-E-Health 2/ AP and JS are on geodata forum. Fingers crossed to postpone the review in May 2021, ending in July 2021. It's not possible to create guideline at the same time with spec. It should be pushed to Dilcis board. 
+*E-Health 2*/ AP and JS are on geodata forum. Fingers crossed to postpone the review in May 2021, ending in July 2021. It's not possible to create guideline at the same time with spec. It should be pushed to Dilcis board. 
 
-Premis/ KB: handed over to Luis Faria, KB, JK and LF had a meeting, LF is checking. What to remember is that we haven’t made a preservation planning for all systems, we just can give recommendations. Based on what we had in SIP, AIP, DIP. The title will be preservation metadata. 
+*Premis*/ KB: handed over to Luis Faria, KB, JK and LF had a meeting, LF is checking. What to remember is that we haven’t made a preservation planning for all systems, we just can give recommendations based on what we had in SIP, AIP, DIP. The title will be Preservation Metadata. 
 
-Archival description/ KB ad JK will have a meeting tomorrow with AIP foundation. We are not making new profiles for archival description, the big one is Archives Portal Europe. 
+*Archival description*/ KB ad JK will have a meeting tomorrow with AIP foundation. We are not making new profiles for archival description, the big one is Archives Portal Europe. 
 
-Guidelines and procedures/ KB working with SIP, incorporating all IPs together, will talk with ABN to incorporate the DIP. Revision review and creation - finalising, these are going to review in august, except the DIP. 
+*Guidelines and procedures*/ KB working with SIP, incorporating all IPs together, will talk with ABN to incorporate the DIP. Revision review and creation - finalising, these are going to the review in august, except the DIP. 
 
-Endorsement and certification/ KB: we haven’t started yet. What to think is that we are looking to standardize someone else’s standard, we need to be careful how we do that 
+*Endorsement and certification*/ KB: we haven’t started yet. What to think is that we are looking to standardize someone else’s standard, we need to be careful how we do that! 
 
-ABN: At the end of the review the work with handling large IPs, in general, has to begin. SS comments the second part of AIP spec is dealing with packaging, had discussions with CW, talked also alternative ways of doing the packaging. This should also work for SIARD 2nd part. Bagit is one of the accepted formats for packaging, principle this is putting our IP of data folder of Bagit. You need to be able to update the parent and child and then maintain the relationship. How to do that in the updates in the lifecycle of IP is the crucial issue. KB specifies that we are not putting out the IP-s in the review. After the specifications is sent out on review in October we start with splitting/segmentation! 
+ABN: At the end of the review the work with handling large IPs, in general, has to begin. SS comments the second part of AIP spec is dealing with packaging, had discussions with CW, talked also alternative ways of doing the packaging. This should also work for SIARD 2nd part. Bagit is one of the accepted formats for packaging, in principle this is putting our IP of data folder of Bagit. You need to be able to update the parent and child and then maintain the relationship. How to do that in the updates in the lifecycle of IP is the crucial issue. KB specifies that we are not putting out the IP-s in the review. After the specifications is sent out on review in October we start with splitting/segmentation! 
 
 Next meeting in two weeks, on June 10th.
 
