--- a/MeetingNotes/20200527.md
+++ b/MeetingNotes/20200527.md
@@ -16,7 +16,7 @@
 •	Stephen Mackey (PIQL)
 •	Sven Schlarb (Swiss Federal Archives)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
-•	Martin S 
+•	Martin Speller (OPF) 
 
 Apologies: 
 
