--- a/MeetingNotes/20200610.md
+++ b/MeetingNotes/20200610.md
@@ -31,43 +31,51 @@ Apologies:
 
 ## Text: 
 Introduction of the new member Henrik K. R. Jakobson from DNA. 
-Reminder that workplan for A2 says we have technical check with A3, KB talked with CW and A3 and we are not going transform specs to GH format until everything is sorted out, as we have so many of them.
-Next A2 is on June 24th and then July 22nd. Before vacation there will be checking of specs via calls with MS and JK. Special calls via zoom are: 
-- (1) e-Health1 on Tue, June 16th at 2PM (SM)
-- (2) SIARD Wed, June 17th at 10AM (ABN, MM, PH, LR)
-- (3) Geodata 1 and 2, Wed, June 17th at 11AM (GZ) 
+
+A reminder that work plan for A2 says we have technical check with A3, KB talked with CW and A3 and we are not going transform specs to GH format until everything is sorted out, as we have so many of them.
+
+Next A2 is on June 24th and then July 22nd. Before vacation, there will be checking of specs via calls with MS and JK. Special calls via zoom are: 
+
+(1)	e-Health1 on Tue, June 16th at 2 PM (SM)
+
+(2)	SIARD Wed, June 17th at 10 AM (ABN, MM, PH, LR)
+
+
+ (3) Geodata 1 and 2, Wed, June 17th at 11 AM (GZ) 
 
 -	Progress report of specs:
 
-*Overall admin*/ Review is coming up, financial numbers should be submitted to DA.
+*Overall admin*/ KB: Review is coming up, financial numbers should be submitted to DA.
 
-*IP-s*/ KB Maintenance mood still, KB, CW, JK has been working with layout. Slowly looking to splitting, ongoing. 
+*IP-s*/ KB: Maintenance mood still, KB, CW, JK has been working with layout. Slowly looking to splitting issues, ongoing work. 
 
-*Geodata +GIS*/ GZ reports interest to live meetings from the people from Geoforum to give comments to GEO CITS, especially from Denmark and Netherlands. Also swrking with templates. 
+*Geodata +GIS*/ GZ reports interest to live meetings from the people from Geoforum to give comments to Geo CITS, especially from Denmark and Netherlands. Also working with templates. 
 Geoforum we got the presentation of the standard what will be used in GIS CITS. KB comments next week check we should figure out how to handle the endorsement, its good you have prepared what’s the standard and who is owning it etc.  
 
-*RM*/ KB: Technical check is going on, meeting with CW planned for the next week.  
+*RM*/ KB: Technical check is going on, meeting with CW planned on the next week.  
 
-*SIARD*/ SIARD use cases will be introduced later. 
+*SIARD*/ SIARD use case will be introduced later. 
 
-*E-Heatlh1*/ SM. Meeting next week is well timed to look what’s done and then move on to the schemas. 
+*E-Heatlh1*/ SM: Meeting next week is well-timed to look what’s done and then move on to the schemas. 
 
-*E-Health 2*/ Have the conference currently.  
+*E-Health 2*/ Are at the conference currently.  
 
-*Premis*/ KB. Ongoing, with Luis Faria in KEEPS, then technical check.  
+*Premis*/ KB: Ongoing, with Luis Faria in KEEPS, then technical check.  
 
-*Archival description*/ KB ad JK had a meeting tomorrow with Archives Portal Europe. Minor changes, approved, and agreed to be outside reviewer of the text. Going to technical check. 
+*Archival description*/ KB ad JK had a meeting with Archives Portal Europe, who gave minor changes, approved and agreed to be outside reviewer of the text. Going to technical check. 
 
-*Guidelines and procedures*/ KB working with SIP, incorporating all IPs together, archival descp part will fit also good.  This one is also going to review in August, its just the 1st version to see what people need answers to. 
+*Guidelines and procedures*/ KB working with SIP, incorporating all IPs together, archival description part will fit also good.  This one is also going to review in August, it's just the 1st version to see what people need answers to. 
 
 Revision review and creation of CITS is also ongoing, for the august review. 
 
-*Endorsement and certification*/ KB. Milestones have dates further down of the project, we are currently seeing some small pieces to be fit together. It will be more ready later. 
-- SIARD use cases: 
-ABN comments we have worked in sub groups. Actual CITS part template, which is provided us by PT and one colleague. Work regarding spec itself. Also worked with use group, by LR. Things look fine. 
-*Actual use cases in different countries presented by MM (https://docs.google.com/document/d/1b-WWLZNrcEzFu8AgvjVApuhxXGMLUU9Um53RVo3EPhM/edit?usp=sharing). 
-EST, NO and FIN have different maturity of using SIARD tools, more advanced in NO and EST. In FIN smaller scale projects, appraisal level and pre-delivery level. This case-study 1 is start, there will be more technical details in case study 2. 
-Detailed presentations take place, including SWOT analysis of EST (by LR), NO, FIN, DK and Switzerland (by MM).  The document is not finally ready, it needs final parts and recommendations. Simultaneously the work with case study 2 is going on, it will focus more on technical side. 
+*Endorsement and certification*/ KB: Milestones have dates further down of the project, we are currently seeing some small pieces to be fit together. It will be more ready later. 
+
+- SIARD use case document presentation 
+ABN comments we have worked in subgroups, things look fine. 
+
+Actual use cases in different countries presented by MM (https://docs.google.com/document/d/1b-WWLZNrcEzFu8AgvjVApuhxXGMLUU9Um53RVo3EPhM/edit?usp=sharing). 
+EST, NO and FIN have different maturity of using SIARD tools, more advanced in NO and EST. In FIN smaller scale projects, appraisal level and pre-delivery level. This case-study 1 is the start, there will be more technical details in case study 2. 
+Detailed presentations take place, including SWOT analysis of EST (by LR), NO, FIN, DK and Switzerland (by MM).  The document is not finally ready, it needs final parts and recommendations. Simultaneously the work with case study 2 is going on, it will focus more on the technical side. 
 KB comments this looks really good! It will be open to comments.  
 Next meeting June 24th.
 
